# ChangeLog for xfce-base/xfce4-panel
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-panel/ChangeLog,v 1.176 2011/01/02 14:33:02 ssuominen Exp $

*xfce4-panel-4.7.7 (02 Jan 2011)

  02 Jan 2011; Samuli Suominen <ssuominen@gentoo.org>
  +xfce4-panel-4.7.7.ebuild:
  Version bump.

  13 Dec 2010; Samuli Suominen <ssuominen@gentoo.org>
  +xfce4-panel-4.7.4.ebuild, xfce4-panel-4.7.6.ebuild:
  Restore xfce4-panel-4.7.4 wrt #348615 by Sebastian Pipping (and Jory A. Pratt
  from IRC).

*xfce4-panel-4.7.6 (05 Dec 2010)

  05 Dec 2010; Samuli Suominen <ssuominen@gentoo.org>
  +xfce4-panel-4.7.6.ebuild:
  Version bump.

*xfce4-panel-4.7.5 (04 Dec 2010)

  04 Dec 2010; Samuli Suominen <ssuominen@gentoo.org>
  +xfce4-panel-4.7.5.ebuild:
  Version bump.

*xfce4-panel-4.7.4 (03 Nov 2010)

  03 Nov 2010; Samuli Suominen <ssuominen@gentoo.org>
  +xfce4-panel-4.7.4.ebuild:
  Version bump.

*xfce4-panel-4.7.3 (05 Sep 2010)

  05 Sep 2010; Samuli Suominen <ssuominen@gentoo.org>
  +xfce4-panel-4.7.3.ebuild:
  Version bump.

  02 Sep 2010; Samuli Suominen <ssuominen@gentoo.org>
  xfce4-panel-4.6.4.ebuild:
  Fix libxfce4util dependencies wrt #330005 by Ronny Perinke.

  29 Aug 2010; Raúl Porcel <armin76@gentoo.org> xfce4-panel-4.6.4.ebuild:
  alpha/ia64/sparc stable wrt #323729

  11 Aug 2010; Joseph Jezak <josejx@gentoo.org> xfce4-panel-4.6.4.ebuild:
  Marked ppc stable for bug #323729.

  10 Aug 2010; Samuli Suominen <ssuominen@gentoo.org>
  xfce4-panel-4.7.2.ebuild, +files/xfce4-panel-4.7.2-localedir.patch:
  Restore localedir variable to libxfce4panel-1.0.pc wrt #331371.

  10 Aug 2010; Jeroen Roovers <jer@gentoo.org> xfce4-panel-4.6.4.ebuild:
  Stable for HPPA (bug #323729).

  23 Jul 2010; Markus Meier <maekke@gentoo.org> xfce4-panel-4.6.4.ebuild:
  arm stable, bug #323729

*xfce4-panel-4.7.2 (21 Jul 2010)

  21 Jul 2010; Samuli Suominen <ssuominen@gentoo.org>
  +xfce4-panel-4.7.2.ebuild:
  Version bump.
