@@ -1,6 +1,12 @@
 # ChangeLog for xfce-base/xfce4-panel
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-panel/ChangeLog,v 1.176 2011/01/02 14:33:02 ssuominen Exp $
+# $Header: /var/cvsroot/gentoo-x86/xfce-base/xfce4-panel/ChangeLog,v 1.177 2011/01/16 17:01:57 ssuominen Exp $
+
+*xfce4-panel-4.8.0 (16 Jan 2011)
+
+  16 Jan 2011; Samuli Suominen <ssuominen@gentoo.org>
+  +xfce4-panel-4.8.0.ebuild:
+  Version bump.
 
 *xfce4-panel-4.7.7 (02 Jan 2011)
 
